--- a/Proyecto final DAM/Gestion Archivos/views/auth/tutor-login.pug
+++ b/Proyecto final DAM/Gestion Archivos/views/auth/tutor-login.pug
@@ -2,7 +2,7 @@ extends ../layout/index
 
 block contenido 
     div(class="py-10")
-            a(href="/auth/login" class="cursor-pointer") 
+            a(href="/tutor-login" class="cursor-pointer") 
                 h1(class="bg-clip-text text-transparent lg:text-6xl md:text-6xl sm:text-6xl text-4xl bg-gradient-to-r from-green-700 to-white font-extrabold text-center italic ") Gestión
                     span(class=" lg:text-2xl md:text-2xl sm:text-2xl text-2xl font-extrabold text-white") Archivos
             
@@ -18,19 +18,15 @@ block contenido
 
             div(class="mt-8 mx-3 lg:mx-auto lg:max-w-md md:mx-auto md:max-w-md sm:mx-auto sm:max-w-md drop-shadow-[0_1px_55px_rgba(17,154,168,1)] hover:drop-shadow-[0_1px_60px_rgba(17,154,168,1)]")
                 div(class="bg-white py-8 px-4")
-                    form(action="/auth/login" method="POST" noValidate)
+                    form(action="/tutor-login" method="POST" noValidate)
                         input(type="hidden" name="_csrf" value = csrfToken)
                         div(class="my-3") 
                             label(for="email" class="block uppercase text-black italic font-bold mb-2") Correo electrónico  
-                            input(type="email" autocomplete="off" name="email" id="email" class="w-full px-3 py-2 border border-gray-400 rounded-md" placeholder="ejemplo@correo.es" value=usuario? usuario.email : '')
+                            input(type="email" autocomplete="off" name="email" id="email" class="w-full px-3 py-2 border border-gray-400 rounded-md" placeholder="ejemplo@correo.es" value=tutor? tutor.email : '')
                         div(class="my-3") 
                             label(for="password" class="block uppercase text-black italic font-bold mb-2") password  
                             input(type="password" name="password" id="password" class="w-full px-3 py-2 border border-gray-400 rounded-md")
                         
-                        div(class="flex mt-7 justify-between")
-                            a(class="text-xs" href="/auth/registro") Crear Cuenta
-                            a(class="text-xs" href="/tutor-login") Soy tutor
-                            a(class="text-xs" href="/auth/olvide-password") ¿Olvidaste tu contraseña?
                         
                         input(type="submit" value="Aceptar" class="w-full bg-green-400 text-white font-bold text-2xl rounded-xl uppercase py-2 mt-12 hover:bg-green-500")
 
